@@ -4,6 +4,10 @@ Devel::NYTProf:Changes - List of significant changes to Devel::NYTProf
 
 (As of $Date$ $Revision$)
 
+=head2 Changes in Devel::NYTProf 2.05 XXX
+
+  Fixed alteration of $! during profiling thanks to Slaven Rezic.
+
 =head2 Changes in Devel::NYTProf 2.04 (svn r483) 1st Oct 2008
 
   Fixed rare divide-by-zero error in reporting code.
